# aircasHD

./: build-profile.json5  local.properties  package-lock.json  package.json
.hvigor/outputs/logs/details/: details.json
entry/src/main/: config.json
entry/src/main/cpp/: CMakeLists.txt  aircashd.cpp
entry/src/main/cpp/types/libaircashd/: index.d.ts  package.json
entry/src/main/ets/MainAbility/pages/: controlpage.ets  index.ets  sendmessage.ets  sendpicture.ets  videostream.ets
entry/src/main/resources/base/element/: string.json
entry/src/ohosTest/: config.json
